--- a/privacy/index.html
+++ b/privacy/index.html
@@ -208,7 +208,7 @@
       <h2 id="contact-privacy">9. Contact Us</h2>
       <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
       <p><strong>AppThemis Technologies Inc.</strong> (Attn: Privacy Officer)<br/>
-         Email: <a href="mailto:privacy@acesolver.com">privacy@acesolver.com</a></p>
+         Email: <a href="mailto:privacy@acesolver.com">contact@acesolver.com</a></p>
       <p>When making a rights request, please specify the right you wish to exercise and provide sufficient information for verification.</p>
 
       <p style="font-size:0.9em; color:gray;">This Privacy Policy and Terms of Use were last updated on September 1, 2025.</p>
